--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-home fa-stack-1x fa-inverse"></i>
                     </span>
-                    <a href="next/profile.html">
+                    <a href="https://drive.google.com/file/d/1J6_CqBpyAZMYpGuxl4d39FMMH1Ygi_by/view?usp=drive_link">
                         <h4 class="my-3">Profile Kelurahan</h4>
                     </a>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
@@ -83,7 +83,7 @@
                 <div class="col-md-4" style="margin-top: 150px;">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fas fa-person fa-stack-1x fa-inverse"></i>
                     </span>
                     <a href="posyandu.html">
                         <h4 class="my-3">LEMBAGA KEMASYARAKATAN KELURAHAN</h4>
