--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-user fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="my-3">PERANGKAT KELURAHAN</h4>
+                    <h4 class="my-3">Perangkat Kelurahan</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
@@ -86,7 +86,7 @@
                         <i class="fas fa-person fa-stack-1x fa-inverse"></i>
                     </span>
                     <a href="posyandu.html">
-                        <h4 class="my-3">LEMBAGA KEMASYARAKATAN KELURAHAN</h4>
+                        <h4 class="my-3">Lembaga Kemasyarakatan Kelurahan</h4>
                     </a>
                     <p class="text-muted">LPMK, RT, RW, PKK, POSYANDU, KARANG TARUNA, LINMAS</p>
                 </div>
@@ -328,7 +328,7 @@
                 </div>
 
                 <div class="col-lg-2 col-md-3 footerfooter-links">
-                    <h4>Our Services</h4>
+                    <h4>Pelayanan Kami</h4>
                     <ul>
                         <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
                         <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
